{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 111,
  "lineage": "13698bb2-75b5-9d6a-7682-2527fd57bbf0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-09T16:01:12.976-08:00",
            "enable_cdn": false,
            "fingerprint": "nkaU1BXas0M=",
            "generated_id": 3319663149091980967,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/healthChecks/http-basic-check"
            ],
            "id": "projects/cis-91-ajlancaster/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "cis-91-ajlancaster",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T14:20:07.890-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-db",
            "log_config": [],
            "name": "terraform-firewall-allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T16:01:01.342-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-health-check",
            "log_config": [],
            "name": "terraform-firewall-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T13:29:53.480-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-http",
            "log_config": [],
            "name": "terraform-firewall-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T13:29:53.452-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-ssh",
            "log_config": [],
            "name": "terraform-firewall-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/firewalls/terraform-firewall-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cis-91-ajlancaster/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "34.149.136.233",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "port_range": "80-80",
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/forwardingRules/lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/targetHttpProxies/http-load-balancer-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.default",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/disks/vm-persistent-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-ajlancaster/zones/us-central1-c/instances/db-instance",
            "instance_id": "2424600670503930665",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "KliS2fuj6vA=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.26.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-ajlancaster"
              }
            ],
            "project": "cis-91-ajlancaster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/instances/db-instance",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-ajlancaster.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.persistent_disk",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/disks/web-instance-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-0",
            "instance_id": "820156465319055131",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "KliS2fuj6vA=",
            "name": "web-instance-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.7.62",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-ajlancaster"
              }
            ],
            "project": "cis-91-ajlancaster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-0",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-ajlancaster.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/disks/web-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-1",
            "instance_id": "4326990072727801000",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "KliS2fuj6vA=",
            "name": "web-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.51.178",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-ajlancaster"
              }
            ],
            "project": "cis-91-ajlancaster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-1",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-ajlancaster.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/disks/web-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-2",
            "instance_id": "8687168419823684775",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "KliS2fuj6vA=",
            "name": "web-instance-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.116.246.41",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network",
                "network_ip": "10.128.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-ajlancaster"
              }
            ],
            "project": "cis-91-ajlancaster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/zones/us-central1-c/instances/web-instance-2",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-ajlancaster.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cis-91-ajlancaster/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "429807542282982898",
            "project": "cis-91-ajlancaster",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T16:02:16.963-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/cis-91-ajlancaster/global/targetHttpProxies/http-load-balancer-proxy",
            "name": "http-load-balancer-proxy",
            "project": "cis-91-ajlancaster",
            "proxy_bind": false,
            "proxy_id": 1077962555866285671,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/targetHttpProxies/http-load-balancer-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/urlMaps/default-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_url_map.default",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T16:02:05.545-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "WOGcS7ecoyU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cis-91-ajlancaster/global/urlMaps/default-url-map",
            "map_id": 1105604943908505234,
            "name": "default-url-map",
            "path_matcher": [],
            "project": "cis-91-ajlancaster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-ajlancaster/global/urlMaps/default-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    }
  ]
}